[gd_scene load_steps=4 format=3 uid="uid://jregyvqmn1nb"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_game_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(0.2, 0.6, 1, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_game_ui")

[node name="Container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 0

[node name="HealthBox" type="HBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HealthLabel" type="Label" parent="Container/HBoxContainer/HealthBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "HP:"

[node name="HealthBar" type="ProgressBar" parent="Container/HBoxContainer/HealthBox"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthNumbers" type="Label" parent="Container/HBoxContainer/HealthBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "100/100"

[node name="StatsBox" type="VBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 5

[node name="KillsLabel" type="Label" parent="Container/HBoxContainer/StatsBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "Kills: 0"
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="Container/HBoxContainer/StatsBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "Time: 00:00"
horizontal_alignment = 2

